Создал вторую версию

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script>
         function generatePassword() {
             const length = parseInt(document.getElementById("length").value);
-            const letters = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()";
+            const letters = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
             let password = "";
 
             for (let i = 0; i < length; i++) {
